--- a/base/style/style.css
+++ b/base/style/style.css
@@ -12,13 +12,25 @@
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 1280px;
   padding: 0 25px;
   margin: 0 auto;
 }
 
 body {
   margin: 0;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  /* ширина для вертикального скролла */
+  height: 8px;
+  /* высота для горизонтального скролла */
+  background-color: #E5E5E5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #72BF44;
 }
 
 .colored-button, .transparent-button {
@@ -602,6 +614,9 @@ header .header__cart:hover .header__cart__logo svg {
       align-self: center;
 }
 
+#Invest-form {
+  padding: 0 0 140px 0;
+}
 #Invest-form .invest-form {
   max-width: 600px;
   display: -webkit-box;
@@ -701,8 +716,311 @@ header .header__cart:hover .header__cart__logo svg {
 #Invest-form .invest-form__block__checkbox .checkbox-text a:hover {
   border-bottom: 1px solid #72BF44;
 }
-#Invest-form .invest-form__block a {
+#Invest-form .invest-form__block button {
+  width: 100%;
   padding: 17px 0;
   line-height: 2.8rem;
   font-size: 1.8rem;
+}
+
+footer {
+  background: #ECEFF1;
+  padding: 70px 0;
+}
+footer .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+footer .footer hr {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+  margin: 0;
+  border: 0;
+  border-top: 1px solid #e5e5e5;
+}
+footer .footer__main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 0 40px 0;
+}
+footer .footer__main__contacts h4, footer .footer__main__services h4, footer .footer__main__documents h4, footer .footer__main__information h4 {
+  font-size: 1.8rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+footer .footer__main__services, footer .footer__main__documents {
+  width: 20%;
+}
+footer .footer__main__services ul, footer .footer__main__documents ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
+footer .footer__main__services ul li, footer .footer__main__documents ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0;
+}
+footer .footer__main__services ul li:not(:first-child), footer .footer__main__documents ul li:not(:first-child) {
+  margin: 20px 0 0 0;
+}
+footer .footer__main__services a, footer .footer__main__documents a {
+  text-decoration: none;
+  color: #000;
+  opacity: 0.6;
+  font-size: 1.6rem;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+footer .footer__main__services a:hover, footer .footer__main__documents a:hover {
+  opacity: 1;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+footer .footer__main__contacts {
+  width: 30%;
+}
+footer .footer__main__contacts ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0;
+}
+footer .footer__main__contacts ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+footer .footer__main__contacts ul li a {
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: #72BF44;
+}
+footer .footer__main__contacts ul li a:hover {
+  border-bottom: 1px solid #72BF44;
+  margin: 0 0 -1px 0;
+}
+footer .footer__main__contacts ul li svg {
+  width: 12px;
+  height: 14px;
+  margin: auto 10px auto 0;
+}
+footer .footer__main__contacts ul li p {
+  font-size: 1.4rem;
+  font-weight: 100;
+  margin: 0;
+}
+footer .footer__main__contacts ul li p span {
+  font-weight: 700;
+}
+footer .footer__main__contacts ul li p a {
+  text-decoration: none;
+  color: #000;
+}
+footer .footer__main__contacts ul li p a:hover {
+  border: none;
+  margin: 0;
+}
+footer .footer__main__contacts ul li:not(:first-child) {
+  margin: 10px 0 0 0;
+}
+footer .footer__main__contacts hr {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+  margin: 20px 0;
+  border: 0;
+  border-top: 1px solid #e5e5e5;
+}
+footer .footer__main__information {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+footer .footer__main__information__payment-methods__logo svg {
+  border: 1px solid #E5E5E5;
+  padding: 2px 10px;
+  margin: 0 20px 0 0;
+}
+footer .footer__main__information__payment-methods__logo svg:last-child path {
+  fill: #72BF44;
+}
+footer .footer__information {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+footer .footer__information svg {
+  margin: auto 0;
+  width: 25%;
+}
+footer .footer__information__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 0 0 40px;
+  width: 60%;
+  margin: auto 0;
+  line-height: 1.5;
+}
+footer .footer__information__text p {
+  font-size: 1.25rem;
+  color: #999;
+  margin: 0 0 20px 0;
+}
+footer .footer__information__licenses {
+  padding: 0 0 0 40px;
+  width: 20%;
+}
+footer .footer__information__licenses a {
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 50px 30px;
+  text-decoration: none;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+footer .footer__information__licenses a svg {
+  margin: 0;
+}
+footer .footer__information__licenses a p {
+  font-size: 1.4rem;
+  margin: 20px 0 0 0;
+  color: #000;
+}
+footer .footer__information__licenses a span {
+  opacity: 0.6;
+  font-size: 1.4rem;
+  margin: 10px 0 0 0;
+  color: #000;
+}
+footer .footer__information__licenses a:hover {
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+footer .footer__description {
+  margin: 40px 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+footer .footer__description__authorization__social-networks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+footer .footer__description__authorization__social-networks a {
+  display: block;
+  padding: 16px;
+  background: #f5f5f5;
+  border-radius: 5px;
+  margin: 0 30px 0 0;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+footer .footer__description__authorization__social-networks a svg {
+  width: 18px;
+  height: 18px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+footer .footer__description__authorization__social-networks a svg path {
+  width: 18px;
+  height: 18px;
+}
+footer .footer__description__authorization__social-networks a:hover {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  background: #fff;
+}
+footer .footer__description__authorization__social-networks a:hover svg path {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  fill: #72BF44;
+}
+footer .footer__description__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 50%;
+  margin: auto 0;
+  line-height: 1.5;
+}
+footer .footer__description__text p {
+  font-size: 1.25rem;
+  color: #999;
+  margin: 0 0 20px 0;
+}
+footer .footer__description__authorization, footer .footer__description__download {
+  width: 25%;
+}
+footer .footer__description__authorization h4, footer .footer__description__download h4 {
+  font-size: 1.75rem;
+  font-weight: 700;
+  margin: 0 0 20px 0;
+}
+footer .footer__description__download {
+  padding: 0 0 0 40px;
+}
+footer .footer__description__download__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
