--- a/base/style/style.scss
+++ b/base/style/style.scss
@@ -419,6 +419,7 @@ header{
       padding: 140px 0 48px 0;
       font-size: 3.0rem;
       font-weight: 500;
+      margin:0;
     }
     p{
       font-size: 1.8rem;
