--- a/base/style/style.css
+++ b/base/style/style.css
@@ -1000,6 +1000,7 @@ footer .footer__description__text {
   width: 50%;
   margin: auto 0;
   line-height: 1.5;
+  padding: 0 0 0 25px;
 }
 footer .footer__description__text p {
   font-size: 1.25rem;
