--- a/base/style/style.scss
+++ b/base/style/style.scss
@@ -818,6 +818,7 @@ footer{
         width: 50%;
         margin:auto 0;
         line-height: 1.5;
+        padding: 0 0 0 25px;
         p{
           font-size: 1.25rem;
           color:#999;
@@ -843,7 +844,7 @@ footer{
   }
 }
 @media screen and (max-width: 1200px){
-
+  
 }
 @media screen and (max-width: 992px){
 
