--- a/base/style/style.css
+++ b/base/style/style.css
@@ -23,9 +23,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 10px;
-  /* ширина для вертикального скролла */
   height: 8px;
-  /* высота для горизонтального скролла */
   background-color: #E5E5E5;
 }
 
@@ -103,9 +101,7 @@ body {
   margin: auto 0;
 }
 .dropdown-list .submenu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none !important;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -130,6 +126,9 @@ body {
 }
 
 .dropdown-list:hover .submenu {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
   opacity: 1;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
@@ -137,6 +136,10 @@ body {
 
 header {
   background: #F8F8F8;
+  position: fixed;
+  z-index: 6;
+  width: 100%;
+  border-bottom: 1px solid #E5E5E5;
 }
 header .header {
   display: -webkit-box;
@@ -248,8 +251,10 @@ header .header__cart__logo span {
   font-size: 0.8rem;
   border-radius: 20px;
   padding: 3px 4.5px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
-header .header__cart__logo svg {
+header .header__cart__logo img {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
@@ -258,14 +263,19 @@ header .header__cart p {
   font-size: 1.6rem;
   font-weight: 400;
 }
-header .header__cart:hover .header__cart__logo svg {
+header .header__cart:hover .header__cart__logo img, header .header__cart:hover .header__cart__logo span {
   -webkit-transform: scale(1.2, 1.2);
           transform: scale(1.2, 1.2);
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
+header .header__burger-menu {
+  display: none;
+}
 
 #Menu {
+  position: relative;
+  top: 82px;
   border-top: 1px solid #E5E5E5;
   border-bottom: 1px solid #E5E5E5;
 }
@@ -289,6 +299,10 @@ header .header__cart:hover .header__cart__logo svg {
   font-weight: 400;
   color: #000;
   font-size: 1.6rem;
+}
+
+#Mobile-menu {
+  display: none;
 }
 
 #Investments {
@@ -552,6 +566,10 @@ header .header__cart:hover .header__cart__logo svg {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+#Awards .awards ul li img {
+  width: 101px;
+  height: 96px;
+}
 #Awards .awards ul li h4 {
   font-size: 2.4rem;
   font-weight: 500;
@@ -657,7 +675,7 @@ header .header__cart:hover .header__cart__logo svg {
 #Invest-form .invest-form__block__password input {
   margin: 0;
 }
-#Invest-form .invest-form__block__password svg {
+#Invest-form .invest-form__block__password img {
   position: absolute;
   top: 18px;
   right: 14px;
@@ -1025,4 +1043,223 @@ footer .footer__description__download__buttons {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+@media screen and (max-width: 1200px) {
+  ::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+    background-color: #E5E5E5;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #72BF44;
+  }
+
+  .container {
+    padding: 0 20px;
+  }
+
+  header {
+    border-bottom: 1px solid #E5E5E5;
+  }
+  header .header__logo {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  header .header__search {
+    display: none;
+  }
+  header .header__burger-menu {
+    display: block;
+    margin: auto 0;
+    position: relative;
+  }
+  header .header__burger-menu__button {
+    cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin: 0 25px;
+    height: 17px;
+    width: 20px;
+    position: relative;
+  }
+  header .header__burger-menu__button span {
+    background: #000;
+    display: block;
+    height: 2px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+  }
+  header .header__burger-menu__button span:nth-child(1), header .header__burger-menu__button span:nth-child(3) {
+    width: 100%;
+    -webkit-transform-origin: left;
+            transform-origin: left;
+  }
+  header .header__burger-menu__button span:nth-child(2) {
+    width: 16px;
+  }
+  header .header__burger-menu__button p {
+    position: absolute;
+    color: #fff;
+    background: #CC0E00;
+    margin: 0;
+    top: -8px;
+    right: -6px;
+    font-size: 0.8rem;
+    border-radius: 20px;
+    padding: 3px 4.5px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+  }
+  header .header__burger-menu__button-active span:nth-child(1), header .header__burger-menu__button-active span:nth-child(3) {
+    width: 100%;
+    -webkit-transform-origin: left;
+            transform-origin: left;
+  }
+  header .header__burger-menu__button-active span:nth-child(1) {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  header .header__burger-menu__button-active span:nth-child(2) {
+    width: 16px;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+    opacity: 0;
+  }
+  header .header__burger-menu__button-active span:nth-child(3) {
+    width: 100%;
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+  }
+
+  #Menu {
+    display: none;
+  }
+
+  #Mobile-menu {
+    display: block;
+    background: rgba(0, 0, 0, 0.7);
+    height: calc(100% - 78px);
+    width: 100%;
+    position: fixed;
+    top: 78px;
+    z-index: 5;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+  }
+  #Mobile-menu .mobile-menu {
+    background: #fff;
+    opacity: 1;
+    color: #000;
+    padding: 0 20px;
+  }
+  #Mobile-menu .mobile-menu__search {
+    position: relative;
+    padding: 20px 0;
+  }
+  #Mobile-menu .mobile-menu__search input {
+    background: #fff;
+    border: 1px solid #B4DFA2;
+    color: #000;
+    font-size: 1.4rem;
+    padding: 12px 16px;
+    border-radius: 4px;
+    outline: none;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0 20px 0 0;
+  }
+  #Mobile-menu .mobile-menu__search img {
+    position: absolute;
+    top: 33px;
+    right: 16px;
+  }
+  #Mobile-menu .mobile-menu__list {
+    padding: 0 0 20px 0;
+  }
+  #Mobile-menu .mobile-menu__list ul {
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #Mobile-menu .mobile-menu__list ul li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  #Mobile-menu .mobile-menu__list ul li a {
+    color: #000;
+    text-decoration: none;
+    font-size: 1.6rem;
+    font-weight: 400;
+    padding: 10px 0;
+  }
+  #Mobile-menu .mobile-menu__language {
+    background: #E5E5E5;
+    margin: 0 -20px 0 -20px;
+    padding: 0 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  #Mobile-menu .mobile-menu__language p {
+    color: #000;
+    text-decoration: none;
+    font-size: 1.6rem;
+    font-weight: 400;
+    padding: 10px 0;
+  }
+  #Mobile-menu .mobile-menu__language__block {
+    font-size: 1.6rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 18px;
+    margin: auto 0;
+    cursor: pointer;
+  }
+  #Mobile-menu .mobile-menu__language__block img {
+    height: 18px;
+    width: 24px;
+  }
+  #Mobile-menu .mobile-menu__language__block span {
+    margin: auto 5px;
+  }
+  #Mobile-menu .mobile-menu__language__block img:nth-child(3) {
+    height: 15px;
+    width: 15px;
+    position: relative;
+    top: 2px;
+  }
+
+  #Mobile-menu.mobile-menu-active {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 0 18px;
+  }
 }
